Setup initial html skeleton.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Admin Dashboard</title>
-      <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Admin Dashboard</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="main-container">
+      <div class="sidebar">
+        <div class="sidebar-title"></div>
+        <div class="sidebar-dashboard-menu">
+          <div class="menu home">Home</div>
+          <div class="menu profile">Profile</div>
+          <div class="menu messages">Messages</div>
+          <div class="menu history">History</div>
+          <div class="menu tasks">Tasks</div>
+          <div class="menu communities">Communities</div>
+        </div>
+        <div class="settings">Settings</div>
+        <div class="support">support</div>
+        <div class="privacy">Privacy</div>
+      </div>
+      <div class="header">
+        <div class="searchBar"></div>
+        <div class="notifications"></div>
+        <div class="profile"></div>
+        <div class="actions"></div>
+      </div>
+      <div class="mainbar">
+            <div class="projects"></div>
+            <div class="announcements"></div>
+            <div class="trending"></div>
+      </div>
+    </div>
+  </body>
 </html>
